Added build test

--- a/_notebooks/nulls.ipynb
+++ b/_notebooks/nulls.ipynb
@@ -46,11 +46,11 @@
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
       " 0   hash_id      39342 non-null  object \n",
-      " 1   jobs         38941 non-null  float64\n",
+      " 1   postal_code  39342 non-null  object \n",
       " 2   company      39342 non-null  object \n",
-      " 3   location     38806 non-null  object \n",
-      " 4   date         39336 non-null  object \n",
-      " 5   postal_code  39342 non-null  object \n",
+      " 3   date         39336 non-null  object \n",
+      " 4   location     38806 non-null  object \n",
+      " 5   jobs         38941 non-null  float64\n",
       "dtypes: float64(1), object(5)\n",
       "memory usage: 1.8+ MB\n"
      ]
@@ -88,84 +88,84 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>hash_id</th>\n",
-       "      <th>jobs</th>\n",
-       "      <th>company</th>\n",
-       "      <th>location</th>\n",
-       "      <th>date</th>\n",
        "      <th>postal_code</th>\n",
+       "      <th>company</th>\n",
+       "      <th>date</th>\n",
+       "      <th>location</th>\n",
+       "      <th>jobs</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>Bean’s Cafe</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>2021-09-16</td>\n",
        "      <td>AK</td>\n",
+       "      <td>Bean’s Cafe</td>\n",
+       "      <td>2021-09-16</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>Kakivik Asset Mgmt</td>\n",
-       "      <td>Prudhoe Bay</td>\n",
-       "      <td>2021-07-02</td>\n",
        "      <td>AK</td>\n",
+       "      <td>Kakivik Asset Mgmt</td>\n",
+       "      <td>2021-07-02</td>\n",
+       "      <td>Prudhoe Bay</td>\n",
+       "      <td>134.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>First Student</td>\n",
-       "      <td>Fairbanks, North Pole</td>\n",
-       "      <td>2021-04-30</td>\n",
        "      <td>AK</td>\n",
+       "      <td>First Student</td>\n",
+       "      <td>2021-04-30</td>\n",
+       "      <td>Fairbanks, North Pole</td>\n",
+       "      <td>185.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>GCI Communication Group</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>2021-04-12</td>\n",
        "      <td>AK</td>\n",
+       "      <td>GCI Communication Group</td>\n",
+       "      <td>2021-04-12</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>59.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
-       "      <td>1234.0</td>\n",
-       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
-       "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
-       "      <td>2020-09-30</td>\n",
        "      <td>AK</td>\n",
+       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
+       "      <td>2020-09-30</td>\n",
+       "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
+       "      <td>1234.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             hash_id    jobs  \\\n",
-       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...    40.0   \n",
-       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...   134.0   \n",
-       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...   185.0   \n",
-       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...    59.0   \n",
-       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...  1234.0   \n",
+       "                                             hash_id postal_code  \\\n",
+       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...          AK   \n",
+       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...          AK   \n",
+       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...          AK   \n",
+       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...          AK   \n",
+       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...          AK   \n",
        "\n",
-       "                                             company  \\\n",
-       "0                                        Bean’s Cafe   \n",
-       "1                                 Kakivik Asset Mgmt   \n",
-       "2                                      First Student   \n",
-       "3                            GCI Communication Group   \n",
-       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
+       "                                             company        date  \\\n",
+       "0                                        Bean’s Cafe  2021-09-16   \n",
+       "1                                 Kakivik Asset Mgmt  2021-07-02   \n",
+       "2                                      First Student  2021-04-30   \n",
+       "3                            GCI Communication Group  2021-04-12   \n",
+       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...  2020-09-30   \n",
        "\n",
-       "                                            location        date postal_code  \n",
-       "0                                          Anchorage  2021-09-16          AK  \n",
-       "1                                        Prudhoe Bay  2021-07-02          AK  \n",
-       "2                              Fairbanks, North Pole  2021-04-30          AK  \n",
-       "3                                          Anchorage  2021-04-12          AK  \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...  2020-09-30          AK  "
+       "                                            location    jobs  \n",
+       "0                                          Anchorage    40.0  \n",
+       "1                                        Prudhoe Bay   134.0  \n",
+       "2                              Fairbanks, North Pole   185.0  \n",
+       "3                                          Anchorage    59.0  \n",
+       "4  Anchorage and 20 smaller Alaska communities, p...  1234.0  "
       ]
      },
      "execution_count": 4,
