--- a/_notebooks/duplicates.ipynb
+++ b/_notebooks/duplicates.ipynb
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bf0d5141-7737-4189-834c-6a2ab5a57ce4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../.warn-transformer/processed/consolidated.csv\")"
+    "df = pd.read_csv(\"~/.warn-transformer/processed/consolidated.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bf22d02f-8d00-4d23-9f70-39334c79e628",
    "metadata": {},
    "outputs": [
@@ -41,18 +41,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 38909 entries, 0 to 38908\n",
+      "RangeIndex: 42795 entries, 0 to 42794\n",
       "Data columns (total 6 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   hash_id      38909 non-null  object \n",
-      " 1   location     34697 non-null  object \n",
-      " 2   jobs         26420 non-null  float64\n",
-      " 3   company      38908 non-null  object \n",
-      " 4   postal_code  38909 non-null  object \n",
-      " 5   date         36414 non-null  object \n",
+      " 0   company      42795 non-null  object \n",
+      " 1   hash_id      42795 non-null  object \n",
+      " 2   location     42257 non-null  object \n",
+      " 3   postal_code  42795 non-null  object \n",
+      " 4   jobs         42311 non-null  float64\n",
+      " 5   date         42788 non-null  object \n",
       "dtypes: float64(1), object(5)\n",
-      "memory usage: 1.8+ MB\n"
+      "memory usage: 2.0+ MB\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1c62bf91-5327-4ad4-82a7-1cf9dda51b70",
    "metadata": {},
    "outputs": [
@@ -87,58 +87,58 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>company</th>\n",
        "      <th>hash_id</th>\n",
        "      <th>location</th>\n",
-       "      <th>jobs</th>\n",
-       "      <th>company</th>\n",
        "      <th>postal_code</th>\n",
+       "      <th>jobs</th>\n",
        "      <th>date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Bean’s Cafe</td>\n",
        "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
        "      <td>Anchorage</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>Bean’s Cafe</td>\n",
        "      <td>AK</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>2021-09-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Kakivik Asset Mgmt</td>\n",
        "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
        "      <td>Prudhoe Bay</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>Kakivik Asset Mgmt</td>\n",
        "      <td>AK</td>\n",
+       "      <td>134.0</td>\n",
        "      <td>2021-07-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>First Student</td>\n",
        "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
        "      <td>Fairbanks, North Pole</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>First Student</td>\n",
        "      <td>AK</td>\n",
+       "      <td>185.0</td>\n",
        "      <td>2021-04-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>GCI Communication Group</td>\n",
        "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
        "      <td>Anchorage</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>GCI Communication Group</td>\n",
        "      <td>AK</td>\n",
+       "      <td>59.0</td>\n",
        "      <td>2021-04-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
        "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
        "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
        "      <td>AK</td>\n",
+       "      <td>1234.0</td>\n",
        "      <td>2020-09-30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -146,6 +146,13 @@
        "</div>"
       ],
       "text/plain": [
+       "                                             company  \\\n",
+       "0                                        Bean’s Cafe   \n",
+       "1                                 Kakivik Asset Mgmt   \n",
+       "2                                      First Student   \n",
+       "3                            GCI Communication Group   \n",
+       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
+       "\n",
        "                                             hash_id  \\\n",
        "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   \n",
        "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...   \n",
@@ -153,22 +160,22 @@
        "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   \n",
        "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...   \n",
        "\n",
-       "                                            location   jobs  \\\n",
-       "0                                          Anchorage   40.0   \n",
-       "1                                        Prudhoe Bay  134.0   \n",
-       "2                              Fairbanks, North Pole  185.0   \n",
-       "3                                          Anchorage   59.0   \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...    NaN   \n",
+       "                                            location postal_code    jobs  \\\n",
+       "0                                          Anchorage          AK    40.0   \n",
+       "1                                        Prudhoe Bay          AK   134.0   \n",
+       "2                              Fairbanks, North Pole          AK   185.0   \n",
+       "3                                          Anchorage          AK    59.0   \n",
+       "4  Anchorage and 20 smaller Alaska communities, p...          AK  1234.0   \n",
        "\n",
-       "                                             company postal_code        date  \n",
-       "0                                        Bean’s Cafe          AK  2021-09-16  \n",
-       "1                                 Kakivik Asset Mgmt          AK  2021-07-02  \n",
-       "2                                      First Student          AK  2021-04-30  \n",
-       "3                            GCI Communication Group          AK  2021-04-12  \n",
-       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...          AK  2020-09-30  "
+       "         date  \n",
+       "0  2021-09-16  \n",
+       "1  2021-07-02  \n",
+       "2  2021-04-30  \n",
+       "3  2021-04-12  \n",
+       "4  2020-09-30  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2c7979b6-9fb7-48c8-aa55-c3b7bb585073",
    "metadata": {},
    "outputs": [],
@@ -189,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4e774c0b-ccea-463c-a30d-dc0f1d4b495a",
    "metadata": {},
    "outputs": [
@@ -198,18 +205,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1233 entries, 367 to 30680\n",
+      "Int64Index: 0 entries\n",
       "Data columns (total 6 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   hash_id      1233 non-null   object \n",
-      " 1   location     1233 non-null   object \n",
-      " 2   jobs         45 non-null     float64\n",
-      " 3   company      1233 non-null   object \n",
-      " 4   postal_code  1233 non-null   object \n",
-      " 5   date         1223 non-null   object \n",
+      " 0   company      0 non-null      object \n",
+      " 1   hash_id      0 non-null      object \n",
+      " 2   location     0 non-null      object \n",
+      " 3   postal_code  0 non-null      object \n",
+      " 4   jobs         0 non-null      float64\n",
+      " 5   date         0 non-null      object \n",
       "dtypes: float64(1), object(5)\n",
-      "memory usage: 67.4+ KB\n"
+      "memory usage: 0.0+ bytes\n"
      ]
     }
    ],
@@ -249,60 +256,14 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>IA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>IN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>MD</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>1187</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  postal_code  total\n",
-       "0          AL      1\n",
-       "1          CA     31\n",
-       "2          CO     10\n",
-       "3          GA      1\n",
-       "4          IA      1\n",
-       "5          IN      1\n",
-       "6          MD      1\n",
-       "7          TX   1187"
+       "Empty DataFrame\n",
+       "Columns: [postal_code, total]\n",
+       "Index: []"
       ]
      },
      "execution_count": 8,
@@ -324,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f283fb9a-7ca5-44ac-b342-470e54749c73",
    "metadata": {},
    "outputs": [],
@@ -349,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
