--- a/_notebooks/nulls.ipynb
+++ b/_notebooks/nulls.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../.warn-transformer/processed/consolidated.csv\")"
+    "df = pd.read_csv(\"~/.warn-transformer/processed/consolidated.csv\")"
    ]
   },
   {
@@ -41,18 +41,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 39342 entries, 0 to 39341\n",
+      "RangeIndex: 42795 entries, 0 to 42794\n",
       "Data columns (total 6 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   hash_id      39342 non-null  object \n",
-      " 1   postal_code  39342 non-null  object \n",
-      " 2   company      39342 non-null  object \n",
-      " 3   date         39336 non-null  object \n",
-      " 4   location     38806 non-null  object \n",
-      " 5   jobs         38941 non-null  float64\n",
+      " 0   company      42795 non-null  object \n",
+      " 1   hash_id      42795 non-null  object \n",
+      " 2   location     42257 non-null  object \n",
+      " 3   postal_code  42795 non-null  object \n",
+      " 4   jobs         42311 non-null  float64\n",
+      " 5   date         42788 non-null  object \n",
       "dtypes: float64(1), object(5)\n",
-      "memory usage: 1.8+ MB\n"
+      "memory usage: 2.0+ MB\n"
      ]
     }
    ],
@@ -87,85 +87,92 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>hash_id</th>\n",
-       "      <th>postal_code</th>\n",
        "      <th>company</th>\n",
-       "      <th>date</th>\n",
+       "      <th>hash_id</th>\n",
        "      <th>location</th>\n",
+       "      <th>postal_code</th>\n",
        "      <th>jobs</th>\n",
+       "      <th>date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
-       "      <td>AK</td>\n",
        "      <td>Bean’s Cafe</td>\n",
-       "      <td>2021-09-16</td>\n",
+       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
        "      <td>Anchorage</td>\n",
+       "      <td>AK</td>\n",
        "      <td>40.0</td>\n",
+       "      <td>2021-09-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
-       "      <td>AK</td>\n",
        "      <td>Kakivik Asset Mgmt</td>\n",
-       "      <td>2021-07-02</td>\n",
+       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
        "      <td>Prudhoe Bay</td>\n",
+       "      <td>AK</td>\n",
        "      <td>134.0</td>\n",
+       "      <td>2021-07-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
-       "      <td>AK</td>\n",
        "      <td>First Student</td>\n",
-       "      <td>2021-04-30</td>\n",
+       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
        "      <td>Fairbanks, North Pole</td>\n",
+       "      <td>AK</td>\n",
        "      <td>185.0</td>\n",
+       "      <td>2021-04-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
-       "      <td>AK</td>\n",
        "      <td>GCI Communication Group</td>\n",
-       "      <td>2021-04-12</td>\n",
+       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
        "      <td>Anchorage</td>\n",
+       "      <td>AK</td>\n",
        "      <td>59.0</td>\n",
+       "      <td>2021-04-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
-       "      <td>AK</td>\n",
        "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
-       "      <td>2020-09-30</td>\n",
+       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
        "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
+       "      <td>AK</td>\n",
        "      <td>1234.0</td>\n",
+       "      <td>2020-09-30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             hash_id postal_code  \\\n",
-       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...          AK   \n",
-       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...          AK   \n",
-       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...          AK   \n",
-       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...          AK   \n",
-       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...          AK   \n",
+       "                                             company  \\\n",
+       "0                                        Bean’s Cafe   \n",
+       "1                                 Kakivik Asset Mgmt   \n",
+       "2                                      First Student   \n",
+       "3                            GCI Communication Group   \n",
+       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
        "\n",
-       "                                             company        date  \\\n",
-       "0                                        Bean’s Cafe  2021-09-16   \n",
-       "1                                 Kakivik Asset Mgmt  2021-07-02   \n",
-       "2                                      First Student  2021-04-30   \n",
-       "3                            GCI Communication Group  2021-04-12   \n",
-       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...  2020-09-30   \n",
+       "                                             hash_id  \\\n",
+       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   \n",
+       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...   \n",
+       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...   \n",
+       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   \n",
+       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...   \n",
        "\n",
-       "                                            location    jobs  \n",
-       "0                                          Anchorage    40.0  \n",
-       "1                                        Prudhoe Bay   134.0  \n",
-       "2                              Fairbanks, North Pole   185.0  \n",
-       "3                                          Anchorage    59.0  \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...  1234.0  "
+       "                                            location postal_code    jobs  \\\n",
+       "0                                          Anchorage          AK    40.0   \n",
+       "1                                        Prudhoe Bay          AK   134.0   \n",
+       "2                              Fairbanks, North Pole          AK   185.0   \n",
+       "3                                          Anchorage          AK    59.0   \n",
+       "4  Anchorage and 20 smaller Alaska communities, p...          AK  1234.0   \n",
+       "\n",
+       "         date  \n",
+       "0  2021-09-16  \n",
+       "1  2021-07-02  \n",
+       "2  2021-04-30  \n",
+       "3  2021-04-12  \n",
+       "4  2020-09-30  "
       ]
      },
      "execution_count": 4,
@@ -220,12 +227,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>NJ</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>RI</td>\n",
-       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -233,8 +235,7 @@
       ],
       "text/plain": [
        "  postal_code  total\n",
-       "0          NJ      3\n",
-       "1          RI      3"
+       "0          NJ      7"
       ]
      },
      "execution_count": 5,
@@ -387,36 +388,41 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>NJ</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>NY</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>OK</td>\n",
        "      <td>322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>OR</td>\n",
        "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>12</th>\n",
        "      <td>TX</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <td>VA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>14</th>\n",
        "      <td>WA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>15</th>\n",
        "      <td>WI</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -434,13 +440,14 @@
        "5           MD      1\n",
        "6           MO      1\n",
        "7           NE      8\n",
-       "8           NY     18\n",
-       "9           OK    322\n",
-       "10          OR     54\n",
-       "11          TX     10\n",
-       "12          VA      1\n",
-       "13          WA      1\n",
-       "14          WI      1"
+       "8           NJ      2\n",
+       "9           NY     18\n",
+       "10          OK    322\n",
+       "11          OR     54\n",
+       "12          TX     10\n",
+       "13          VA      1\n",
+       "14          WA      1\n",
+       "15          WI      1"
       ]
      },
      "execution_count": 7,
@@ -514,61 +521,71 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>IL</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>IN</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>MD</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>MO</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>MT</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>NE</td>\n",
        "      <td>152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>NJ</td>\n",
-       "      <td>15</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>NM</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>12</th>\n",
        "      <td>NY</td>\n",
        "      <td>106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <td>OR</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>14</th>\n",
        "      <td>RI</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>15</th>\n",
        "      <td>TX</td>\n",
        "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <td>VT</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
        "      <td>WI</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -582,18 +599,20 @@
        "1           CA      2\n",
        "2           CT     18\n",
        "3           ID     15\n",
-       "4           IN      9\n",
-       "5           MD     10\n",
-       "6           MO      4\n",
-       "7           MT      2\n",
-       "8           NE    152\n",
-       "9           NJ     15\n",
-       "10          NM      3\n",
-       "11          NY    106\n",
-       "12          OR     34\n",
-       "13          RI      2\n",
-       "14          TX     26\n",
-       "15          WI      2"
+       "4           IL     78\n",
+       "5           IN      9\n",
+       "6           MD     10\n",
+       "7           MO      4\n",
+       "8           MT      2\n",
+       "9           NE    152\n",
+       "10          NJ     19\n",
+       "11          NM      3\n",
+       "12          NY    106\n",
+       "13          OR     34\n",
+       "14          RI      2\n",
+       "15          TX     26\n",
+       "16          VT      1\n",
+       "17          WI      2"
       ]
      },
      "execution_count": 8,
@@ -622,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
